        (PR#16350).  Fixed in pqR as part of the rewrite of the parser
        and deparser.
  \item B
  \item From R-3.2.1: The parser could overflow internally when given 
        numbers in scientific format with extremely large exponents.  
        (PR#16358).  Fixed in pqR partly as in R Core fix.  Was actually a 
        problem with any numerical input, not just with the parser.
  \item C
  \item D
}}

  \subsection{BUG FIXES}{
  \itemize{
  \item The new parser fixes bugs arising from the old parser's kludge
        to handle semicolons, illustrated by the incorrect output seen below:
\preformatted{  > p<-parse()
  ?"abc;xyz"
  Error in parse() : <stdin>:1:1: unexpected INCOMPLETE_STRING
  1: "abc;
      ^
  > p<-parse()
  ?8 #abc;xyz
  Error in parse() : <stdin>:1:7: unexpected end of input
  1: 8 #abc;
          ^
}
  \item Fixed deparsing of complex numbers, which were always deparsed
        as the sum of a real and an imaginary part, even though the
        parser can only produce complex numbers that are pure imaginary.
        For example, the following output was produced before:
\preformatted{  > deparse(quote(3*5i))
  [1] "3 * (0+5i)"
}
        This is now deparsed to \code{"3 * 5i"}.  This bug exists
        in all R Core versions through at least R-3.2.2.
  \item Fixed a number of bugs in the deparser that are illustrated
        by the following, which produce incorrect output as noted, in
        R Core versions through at least R-3.2.2:
\preformatted{  deparse(parse(text="`+`(a,b)[1]")[[1]]) # Omits necessary parens
  deparse(quote(`[<-`(x,1)),control="S_compatible")  # unmatched " and '
  deparse(parse(text="a = b <- c")[[1]])  # Puts in unnecessary parens
  deparse(parse(text="a+!b")[[1]])        # Puts in unnecessary parens
  deparse(parse(text="?lm")[[1]])         # Doesn't know about ? operator
  deparse(parse(text="a:=b")[[1]])        # Doesn't know about := operator