@@ -1933,17 +1933,19 @@ double R_strtod4(const char *str, char **endptr, char dec, Rboolean NA)
                 n = n * 10 + (*p - '0');
                 if (n > MAX_EXPONENT_PREFIX) n = MAX_EXPONENT_PREFIX;
             }
-	    expn += expsign * n;
-	    if(exph > 0) expn -= exph;
-	    if (expn < 0) {
-		for (n = -expn, fac = 1.0; n; n >>= 1, p2 *= p2)
-		    if (n & 1) fac *= p2;
-		ans /= fac;
-	    } else {
-		for (n = expn, fac = 1.0; n; n >>= 1, p2 *= p2)
-		    if (n & 1) fac *= p2;
-		ans *= fac;
-	    }
+            if (ans != 0.0) { /* PR#15976:  allow big exponents on 0 */
+                expn += expsign * n;
+                if(exph > 0) expn -= exph;
+                if (expn < 0) {
+                    for (n = -expn, fac = 1.0; n; n >>= 1, p2 *= p2)
+                        if (n & 1) fac *= p2;
+                    ans /= fac;
+                } else {
+                    for (n = expn, fac = 1.0; n; n >>= 1, p2 *= p2)
+                        if (n & 1) fac *= p2;
+                    ans *= fac;
+                }
+            }
 	}
 	goto done;
     }
@@ -1987,12 +1989,11 @@ double R_strtod4(const char *str, char **endptr, char dec, Rboolean NA)
 	for (n = -expn, fac = 1.0; n; n >>= 1, p10 *= p10)
 	    if (n & 1) fac *= p10;
 	ans /= fac;
-    } else {
+    } else if (ans != 0.0) { /* PR#15976:  allow big exponents on 0, e.g. 0E4933 */
 	for (n = expn, fac = 1.0; n; n >>= 1, p10 *= p10)
 	    if (n & 1) fac *= p10;
 	ans *= fac;
     }
-
 
 done:
     if (endptr) *endptr = (char *) p;
